--- a/resources/main.ui
+++ b/resources/main.ui
@@ -686,7 +686,7 @@
                             <property name="can_focus">False</property>
                             <child>
                               <object class="GtkImageMenuItem" id="item_usuarios">
-                                <property name="label" translatable="yes">_Usuario</property>
+                                <property name="label" translatable="yes">_Usuarios</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="use_underline">True</property>
