--- a/resources/vta_facturas.ui
+++ b/resources/vta_facturas.ui
@@ -25,7 +25,7 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkLabel" id="label4">
+                  <object class="GtkLabel" id="lab_documentos">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Facturas de Venta</property>
@@ -388,7 +388,7 @@
                                             <property name="visible">True</property>
                                             <property name="can_focus">False</property>
                                             <child>
-                                              <object class="GtkLabel" id="label27">
+                                              <object class="GtkLabel" id="lab_orden_compra">
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">0.89999997615814209</property>
