--- a/resources/main.ui
+++ b/resources/main.ui
@@ -806,6 +806,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="tooltip_text" translatable="yes">Crea o Edita una Nota de Débito</property>
+                                <property name="use_underline">True</property>
                                 <property name="image">image52</property>
                                 <property name="use_stock">False</property>
                               </object>
@@ -816,6 +817,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="tooltip_text" translatable="yes">Crea o edita una Nota de Entrega</property>
+                                <property name="use_underline">True</property>
                                 <property name="image">image53</property>
                                 <property name="use_stock">False</property>
                               </object>
